# uv-issue-10006

./: README.md
base_project/: main.py  pyproject.toml
my_project/: main.py  my_thing.py  pyproject.toml
