[project]
name = "my_project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "base_project",
    "fastapi>=0.115",
    "httpx>=0.28",
    "networkx>=3.4.2",
    "pydantic>=2.10",
    "pyyaml>=6.0.2",
    "requests>=2.32",
    "uvicorn>=0.32.0",
]

[tool.uv.sources]
base_project = { path = "${PROJECT_ROOT}/../../base_project/" }